# MyWebsite-rust

./: Cargo.toml  data.db
migrations/2022-09-14-093510_task/: down.sql
src/: lib.rs  main.rs
src/db/: mod.rs  models.rs
src/utils/: mod.rs
static/: index.html
