[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "*", features = ["sqlite"] }
actix-web = "*"
actix-rt = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
log = "*"
env_logger = "*"
chrono = "*"
failure = "0.1.5"
tera = "*"
